# cardputerzero-ssh-term

./: .cz-tuner.json  .gitignore  CMakeLists.txt  README.md  app-builder.json  build-emu.sh  meta.json
.github/workflows/: ci.yml
docs/: APPSTORE.md  DEVICE_CHECKLIST.md  FEATURES.md  MANUAL.md  SCREENS.md  SETUP.md  SUBMIT.md  gen_mockups.py
docs/fonts/: README.md
emu/: cz_app.h
port/: CMakeLists.txt  build.sh  evdev_kbd.c  main.c
src/: config.c  config.h  ime.c  ime.h  lan.c  lan.h  logsink.c  logsink.h  main.c  pty.c  pty.h  sendfile.c  sendfile.h  term.c  term.h  themes.c  themes.h  ui_tune.h  vpn.c  vpn.h
standalone/: build.sh  main.c
